<resources>
    <string name="app_name">无损检测系统</string>

    <string name="serial_port_label">端口号：</string>
    <string name="connect_serial_toggle_on_label">断开</string>
    <string name="connect_serial_toggle_off_label">连接</string>
    <string name="exit_app_label">关闭</string>
    <string name="save_light_spectrum_label">白光谱</string>
    <string name="save_dark_spectrum_label">暗光谱</string>
    <string name="read_spectrum_label">读光谱</string>
    <string name="auto_read_spectrum_label">自动读光谱</string>
    <string name="auto_read_spectrum_hint_label">读取频率</string>
    <string name="auto_read_spectrum_unit_label">秒</string>
    <string name="auto_read_spectrum_warning_label">必须大于5秒</string>
    <string name="save_dark_condition">必须先保存白光谱</string>

    <string name="line_chart_no_data">暂无数据</string>
    <string name="line_chart_description">无损检测光谱</string>

    <string name="preprocessing_read_data_text">读取数据中&#8230;</string>
    <string name="preprocessing_adjust_system_text">系统适配中&#8230;</string>
    <string name="preprocessing_no_data_text">没有数据，先读光谱数据或被测参数未设置&#8230;</string>
    <string name="preprocessing_no_light_dark_text">检查亮、暗数据是否保存&#8230;</string>

    <string name="table_base_info_text">基本信息</string>
    <string name="table_spectrum_text">光谱采集</string>
    <string name="table_index_text">指标预测</string>
    <string name="table_prediction_text">货架期预测</string>
    <string name="table_preference_text">系统设置</string>
    <string name="table_about_text">帮助</string>

    <string-array name="product_type_array">
        <item>牛肉</item>
        <item>猪肉</item>
    </string-array>
    <string-array name="product_type_array_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="packing_type_array">
        <item>PE</item>
        <item>CPP</item>
        <item>PA</item>
        <item>PET</item>
        <item>PA/PE</item>
        <item>PA/CPP</item>
        <item>PET/CPP</item>
        <item>PET/PE</item>
    </string-array>
    <string-array name="packing_type_array_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="packing_form_array">
        <item>包装薄膜</item>
        <item>产品接触</item>
    </string-array>
    <string-array name="packing_form_array_value">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="is_yes">是</string>
    <string name="is_no">否</string>

    <string name="index_dmb_label">脱氧肌红蛋白：</string>
    <string name="index_omb_label">氧合肌红蛋白：</string>
    <string name="index_mmb_label">高铁肌红蛋白：</string>
    <string name="index_ph_label">PH值：</string>
    <string name="index_bacteria_label">菌落总数：</string>
    <string name="index_vbn_label">挥发性盐基氮：</string>
    <string name="index_zero_label">0</string>

    <string name="about_about_label">关于：</string>
    <string name="about_content">一共智能无损肉制品检测仪</string>
    <string name="about_connect_label">联系我们</string>
    <string name="about_connect_twy">陶文寅（taowy@siso.edu.cn）</string>
    <string name="about_connect_pl">潘嘹（panl@jnu.edu.cn）</string>
    <string name="about_usage_label">使用方法：</string>
    <string name="about_usage">打开设备选择相关选项就可以进行检测</string>

    <string name="preference_smooth_category_label">平滑设置</string>
    <string name="preference_smooth_label">是否平滑</string>
    <string name="preference_smooth_key">smooth</string>
    <string name="preference_smooth_count_label">平滑次数</string>
    <string name="preference_smooth_count_key">smooth_count</string>
    <string name="preference_integration_category_label">积分设置</string>
    <string name="preference_integration_time_label">积分时间</string>
    <string name="preference_integration_time_key">integration_time</string>
    <string name="preference_name">sys_preference</string>

    <string name="preference_type_category_label">品种</string>
    <string name="preference_type_key">type</string>
    <string name="preference_type_label">产品种类</string>
    <string name="preference_packing_category_label">包装</string>
    <string name="preference_is_packing_label">是否包装</string>
    <string name="preference_is_packing_key">is_packing</string>
    <string name="preference_packing_type_label">包装材料</string>
    <string name="preference_packing_type_key">packing_type</string>
    <string name="preference_packing_form_label">包装形式</string>
    <string name="preference_packing_form_key">packing_form</string>

    <string name="preference_uninitialized">未初始化</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">功能开发中，敬请期待！</string>

</resources>
