<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnalysisIndexFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/index_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/index_label_width"
            android:layout_height="wrap_content"
            android:text="@string/index_dmb_label"/>

        <TextView
            android:id="@+id/index_dmb_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_zero_label"/>

        <TextView
            android:layout_width="@dimen/index_label_width"
            android:layout_height="wrap_content"
            android:text="@string/index_omb_label"/>

        <TextView
            android:id="@+id/index_omb_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_zero_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/index_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/index_label_width"
            android:layout_height="wrap_content"
            android:text="@string/index_mmb_label"/>

        <TextView
            android:id="@+id/index_mmb_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_zero_label"/>

        <TextView
            android:layout_width="@dimen/index_label_width"
            android:layout_height="wrap_content"
            android:text="@string/index_ph_label"/>

        <TextView
            android:id="@+id/index_ph_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_zero_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/index_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/index_label_width"
            android:layout_height="wrap_content"
            android:text="@string/index_bacteria_label"/>

        <TextView
            android:id="@+id/index_bacteria_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_zero_label"/>

        <TextView
            android:layout_width="@dimen/index_label_width"
            android:layout_height="wrap_content"
            android:text="@string/index_vbn_label"/>

        <TextView
            android:id="@+id/index_vbn_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_zero_label"/>

    </LinearLayout>

</LinearLayout>