<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_port_label"
                android:textSize="@dimen/activity_font_size"/>

            <Spinner
                android:id="@+id/serial_port_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/serial_port_list_value"/>

        </LinearLayout>

        <Button
            android:id="@+id/connect_device_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_serial_label"
            android:textSize="@dimen/activity_font_size"/>

        <ListView
            android:id="@+id/spectrum_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spectrum_list_value"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_light_spectrum_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_light_spectrum_label"
                android:textSize="@dimen/activity_font_size"/>

            <Button
                android:id="@+id/save_dark_spectrum_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_dark_spectrum_label"
                android:textSize="@dimen/activity_font_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_read_spectrum_label"
                android:textSize="@dimen/activity_font_size"/>

            <Switch
                android:id="@+id/toggle_auto_read_spectrum_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/spectrum_line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>